--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-# Natural viewing reveals an extended network of brain regions involved in processing familiar faces that is disrupted in prosopagnosia
+# Game of Thrones Natural viewing reveals an extended network of brain regions involved in processing familiar faces that is disrupted in prosopagnosia
 
 ## Overview
 This dataset contains fMRI movie-watching and category localiser data in 28
