[OpenNeuro] Recorded changes

--- a/README
+++ b/README
@@ -16,9 +16,7 @@ and scene selective regions of interest.
 
 > Please refer to the folloiwng paper when using this dataset:
 >
-> Noad, K., Watson, D.M., Andrews, T.J. (In review). Natural viewing reveals an
-> extended network of regions for familiar faces that is disrupted in
-> developmental prosopagnosia.
+> Noad, K., Watson, D.M., Andrews, T.J. (in press, Cerebral Cortex). Familiarity enhances functional connectivity between visual and non-visual regions of the brain during natural viewing 
 
 
 ## Data Contents
