--- a/README
+++ b/README
@@ -16,7 +16,7 @@ and scene selective regions of interest.
 
 > Please refer to the folloiwng paper when using this dataset:
 >
-> Noad, K., Watson, D.M., Andrews, T.J. (in press, Cerebral Cortex). Familiarity enhances functional connectivity between visual and non-visual regions of the brain during natural viewing 
+> Noad, K., Watson, D.M., Andrews, T.J. (2024, Cerebral Cortex). Familiarity enhances functional connectivity between visual and non-visual regions of the brain during natural viewing 
 
 
 ## Data Contents
